--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
+# Site settings
 title: Craftbox
-description: CSS Craft Archives
-highlighter: pygments
-github: [Repository metadata]
+email: tkshyamaguchi45@gmail.com
+description: > # CSS Craft Archives.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://takashiyamaguchi.github.io/" # the base hostname & protocol for your site
+twitter_username: merlion45
+github_username:  takashiyamaguchi
 
-url: http;//takashiyamaguchi.github.io
+# Build settings
+markdown: kramdown
