--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Craftbox
 email: tkshyamaguchi45@gmail.com
-description: > # CSS Craft Archives.
+description: CSS Craft Archives.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://takashiyamaguchi.github.io/" # the base hostname & protocol for your site
 twitter_username: merlion45
