--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Takashi Yamaguchi
+title: YAMAGUCHI Takashi
 email:  tkshyamaguchi45@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  備忘録
+  あいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえお
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://takashiyamaguchi.github.io/" # the base hostname & protocol for your site
 twitter_username: merlion45
