--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1"
+    "gulp-sourcemaps": "^2.6.1",
+    "normalize.css": "^7.0.0"
   }
 }
