--- a/project/template/package.json
+++ b/project/template/package.json
@@ -1,11 +1,16 @@
 {
   "name": "template",
   "version": "1.0.0",
-  "description": "",
+  "description": "template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.18.6",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
+  }
 }
