--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/takashiyamaguchi/takashiyamaguchi.github.io#readme",
   "devDependencies": {
+    "autoprefixer": "^8.1.0",
     "browser-sync": "^2.18.6",
+    "browsersync-ssi": "^0.2.4",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "postcss-cssnext": "^3.1.0"
   }
 }
