--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "gulpのサンプルファイル作成",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp",
+    "test": "gulp test",
+    "prepublish": "gulp build",
+    "build": "gulp build",
     "start": "gulp"
   },
   "repository": {
@@ -23,9 +25,11 @@
     "browser-sync": "^2.18.6",
     "browsersync-ssi": "^0.2.4",
     "gulp": "^3.9.1",
+    "gulp-aigis": "^1.3.0",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
-    "postcss-cssnext": "^3.1.0"
+    "postcss-cssnext": "^3.1.0",
+    "run-sequence": "^2.2.1"
   }
 }
