--- a/template/package.json
+++ b/template/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.7.3",
-    "ejs-lint": "^0.3.0",
+    "autoprefixer": "^9.7.4",
+    "browser-sync": "^2.26.7",
+    "css-mqpacker": "^7.0.0",
+    "ejs-lint": "^1.0.1",
     "gulp": "^4.0.2",
     "gulp-ejs": "^5.0.0",
     "gulp-notify": "^3.2.0",
